# cargo-n

./: Cargo.toml
src/: main.rs
